overflow issue fixed

--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ body, html {
         width: 100%;
         padding: 0;
         margin-bottom: 20px;
-        background-color:green;
+        background-color:silver;
         height: 130px;
     }
 
